Fix little bugs
- Arrows not showing properly with Unicode --> add icons to fix
- Fix page scrolling when switching screenshots on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -85,9 +85,8 @@ footer {
   gap: 0.75rem;
 }
 
-.footer-category h4 {
+.footer-category h3 {
   margin-bottom: 0.5rem;
-  font-size: 1.1rem;
 }
 
 @media screen and (max-width: 1024px) {
